@@ -35,19 +35,23 @@ private:
 
 	class HListItem {
 	public:
-		HListItem() {}
+		HListItem()
+			: button(NULL)
+		{}
 		~HListItem() {}
 
 		std::string value;
 		std::string tooltip;
+		WidgetButton *button;
 	};
 
 	void checkTooltip(const Point& mouse);
+	void getVisibleButtonRange(size_t& start, size_t& end);
+	bool multipleActionsVisible();
 
 	WidgetLabel label;
 	WidgetButton *button_left;
 	WidgetButton *button_right;
-	WidgetButton *button_action;
 
 	unsigned cursor;
 	bool changed_without_mouse;
@@ -55,6 +59,7 @@ private:
 	bool activated;
 	std::vector<HListItem> list_items;
 	Rect tooltip_area;
+	Point action_button_size;
 
 public:
 	explicit WidgetHorizontalList();
@@ -86,6 +91,7 @@ public:
 
 	bool enabled;
 	bool has_action;
+	size_t max_visible_actions;
 };
 
 #endif
